--- a/public/bootstrap.css
+++ b/public/bootstrap.css
@@ -99,13 +99,13 @@ address {
   font-style: normal;
   line-height: inherit;
 }
-
+/* 
 ol,
 ul,
 dl {
   margin-top: 0;
   margin-bottom: 1rem;
-}
+} */
 
 ol ol,
 ul ul,
