--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -62,6 +62,13 @@
     line-height: 0%;
     transition: all .5s;
 }
+.dark-bg{
+    background:  #272727;
+}
+
+.light-bg{
+    background: #F8F8F8;
+}
 .aceptar:hover{
     transform: scale(1.1);
 }
