--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: .3fr .7fr ;
     width: 100%;
-    background-color: #282828;
+    background-color: #212121;
 }
 /*LOGO*/
 .logo_section{
@@ -86,6 +86,7 @@ div .nav-links{
     height: 34px;
     background-color: #F8F8F8;
     margin-right: 30px;
+    transition: all .4s;
     border-radius: 48px;
 }
 .back_rec{
@@ -94,10 +95,16 @@ div .nav-links{
     height: 28px;
     border-radius: 50px;
     margin-top: 3px;
+    transition: all .4s;
     margin-left: 4px;
 }
+.icon_theme {
+    cursor: pointer;
+}
 .icon_theme img{
+    position: relative;
     text-align: center;
-    margin-top: 2px;
+    transition: all .4s;
+    margin-top: 1px;
 
 } 
