--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -68,7 +68,7 @@ div .nav-links{
     margin: auto  15px !important;
     background-color: #1E1E1E;
     width: 141px;
-    height: 57px;
+    height: 520x;
     text-align: center;
     border-radius: 50px;
     transition: all .4s;
