--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -2,104 +2,154 @@
 *{
     scroll-behavior: smooth;
 }
-
-.whole-body{
-    margin-top: 140px;
-    display: grid;
-    grid-template-columns: .4fr .6fr;
+.total{
+    display: flex;
 }
+.card{
+    margin-top: 100px !important;
+}
+.card-body{
+    height: 426.94px;
+}
+.pelele{
+    text-align: center;
 
-
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+.registro-txt{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    margin-top: 50px;
+    line-height: 0%;
+    color: #282828;
+}
+.ultima-entrada-txt{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    margin-top: 50px;
+    line-height: 0%;
+    color: #615B5B;
+}
+.whole-body{
+    /* margin-top: 140px; */
+    display: grid;
+    grid-template-columns: .2fr .8fr;
+}
+.container1{
+    width: 883.08px;
+height: 426.94px;
+}
+.el-grafico-img{
+width: 100%;
+height: 199.01px;
+}
+.c1{
+    display: grid;
+    grid-template-rows: .2fr .7fr .1fr;
+}
 /*perfil datos de la imagen*/
 .profile-picture{
-    margin-left: 150px;
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .profile-text{
-    margin-bottom: 26px;
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 14px;
     line-height: 0%;color: #676767;
 }
 .profile-picture-img{
-    width: 194px;
-    margin-bottom: 32px;
-    height: 194px;
+   width: 134.68px;;
+  height: 134.46px;
     border-radius: 117px;
 }
 
 .change-profile-picture{
     background: #282828;
     border-radius: 50px;
-    
-    width: 121px;
-    height: 35.44px;
-    margin-bottom: 34px;
+    width: 84px;
+    height: 24.56px;
+    margin-bottom: 23px;
+    margin-top: 30px;
     font-family: Montserrat;
     border: none;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 12px;
     line-height: 0%;
     color: #D3D3D3;
+}
+.qr-code-text{
+    margin-top: 4px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 0%;
+    color: #282828;
 
+}
+.qr-code-imag{
+    width: 73.59px;
+height: 73.47px;
 }
 .profile-name{
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
-    font-size: 22px;
-    line-height: 0%;
-    color: #282828;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 /*datos del perfil*/
 .datos-del-perfil{
-    padding-top: 20px;
-    margin-left: 30px;
+    margin-left: 100px;
 }
 
 .datos-del-perfil-text{
     margin-top: 10px;
     margin-bottom: 60px;
+    
     font-family: Montserrat;
     font-style: normal;
-    font-weight: 600;
-    font-size: 30px;
+    font-size: 18px;
     line-height: 0%;
     color: #282828;
 }
 .fields{
-    width: 800px;
-    align-items: flex-end;
-    justify-content: end;
+    
+    width: 400px;
 }
 .full-name-field{
     display: flex;
-    margin-bottom: 50px;
+    margin-bottom: 18px;
 }
 .email-field{
     display: flex;
-    margin-bottom: 50px;
+    margin-bottom: 18px;
 }
 .dni-field{
     display: flex;
-    margin-bottom: 50px;
+    margin-bottom: 18px;
 }
 .companyid-field{
+    
     display: flex;
 }
 .description{
-    
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 14px;
     line-height: 0%;
     color: #272727;
 }
@@ -109,92 +159,26 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 13px;
     line-height: 0%;
+    width: 200px;
     color: #272727;
-    width: 600px;
     height: 12px;
     border-bottom: 1px solid #7A7A7A;
 }
-.second-row{
-    display: grid;
-    grid-template-columns: .5fr .5fr;
-    margin-top: 150px;
-    align-items: center;
-    /* height: 900px; */
-    margin-bottom: 100px;
-}
-.qr-zone{
-    border-right: 1px solid #4E5053;
-}
-.chart-zone{
-}
-.qr-zone,.chart-zone{
+@media (max-width:1400px){
+.total{
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
-.div-separador{
-    width: 100%;
-    text-align: center;
-}
-.separador{
-    height: 600px;
-    width: 20px;
-    text-align: center;
-  background-color: red;
-}
-/*QR CODE*/
-.qr-text{
-    margin-bottom: 60px;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 0%;
-
-    color: #282828;
-}
-.qr-img{
-    width: 428px;
-    height: 428px;
-}
-/*CHART*/
-.chart-text{
-    margin-bottom: 60px;
-
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 0%;
-
-    color: #282828;
-}
-.chart-img{
-    width: 666px;
-    height: 441px;
-}
-.ultima-entrada-text{
-    margin-top: 20px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 0%;
-
-    color: #615B5B
-}
-
-@media (max-width:1400px){
-
-    .whole-body{
+    /* .whole-body{
         display: flex;
         flex-direction: column;
         margin-top: 60px;
-    }
+    } */
     .profile-picture{
         margin-left: 0;
+
         margin-bottom: 40px;
     }
     .datos-del-perfil, .fields{
@@ -205,7 +189,7 @@
     }
     .second-row{
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         margin-top: 50px;
     }
     .second-row img{
