--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,14 +1,10 @@
-/* FONTS
+/* FONTS*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-/* *{
-    margin: 0;
-    padding:0;
-} */
-/*navbar*/
 .navbar{
     height: 80px;
     display: grid;
+
     grid-template-columns: .3fr .7fr ;
     width: 100%;
     background-color: #212121;
