--- a/src/styles/owo.css
+++ b/src/styles/owo.css
@@ -83,6 +83,7 @@
   
   .dropdown {
     position: absolute;
+    z-index: 99999;
     top: 65px;
     width: 300px;
     transform: translateX(-45%);
