--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -70,6 +70,7 @@ height: 199.01px;
 .profile-picture-img{
    width: 134.68px;;
   height: 134.46px;
+  object-fit: cover;
     border-radius: 117px;
 }
 
