--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -10,8 +10,33 @@
     color: #282828;
 
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+td p a{
+    color: #282828 !important;
+    text-decoration: none;
+}
+.table thead th{
+    border: none;
+}
+.profile-imgs{
+    width: 71px;
+    height: 57px;
+    object-fit: cover;
+    border-radius: 3px;
+}
 .container{
     max-width: 1400px;
+    padding: 0 !important;
+}
+.botonera{
+    background-color: rgba(190, 190, 190, 0.667);
+}
+.boton-elim-border{
+    border-left:  1px solid #D3D3D3;;
 }
 .contenedor-de-tabla{
     margin-top: 150px;
