--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -9,13 +9,17 @@
     margin-top: 100px !important;
 }
 .card-body{
-    height: 426.94px;
+    height: 530px;
 }
 .pelele{
     text-align: center;
-
+justify-content: space-around;
+align-items: center;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: .1fr 1fr .1fr;
+}
+.card-body p{
+    margin-top:1rem !important;
 }
 .registro-txt{
     font-family: Montserrat;
@@ -45,8 +49,8 @@
 height: 426.94px;
 }
 .el-grafico-img{
-width: 100%;
-height: 199.01px;
+    width: 100%;
+    height: 199.01px;
 }
 .c1{
     display: grid;
@@ -104,6 +108,7 @@ height: 199.01px;
 height: 73.47px;
 }
 .profile-name{
+    text-align: center;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
