--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,9 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 .navbar{
-    height: 80px;
+    text-align: center;
+    align-items: center;
+    height: 75px;
     display: grid;
-
     grid-template-columns: .3fr .7fr ;
     width: 100%;
     background-color: #212121;
