--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: .3fr .7fr ;
     width: 100%;
-    background-color: #212121;
+    background-color:rgb(211, 211, 211);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 /*LOGO*/
