--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -142,17 +142,12 @@ width: 100%;
 }
 .b1{
     height: 100%;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
 }
 .a1{
-    width: 100%;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+    height: 100%;
+}
+.loader-entradas{
+    
 }
 .flecha-pagination{
     border-radius: 5px;
