--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -3,7 +3,7 @@ body{
     overflow-x: hidden;
 }
 .tabla-admin{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 .thead tr th{
     font-style: normal;
@@ -69,7 +69,7 @@ td p a{
 .contenerdor-centro{
     width: 100%;
     display: flex;
-    margin-top: 150px;
+    /* margin-top: 150px; */
     align-items: center;
     justify-content: space-around;
 }
@@ -79,21 +79,23 @@ td p a{
 
 .entradas-panel{
     overflow:auto;
+    width: 60%;
     background-color: #d3d3d3;
-    height: 500px;
+    height: 400px;
     border-radius:10px;
 }
 .entradas-recientes{
     text-align: center;
 }
+.entrada:hover{
+    transform: scale(1.02);
+    cursor: pointer
+}
 .entrada{
-
+    transition: all .3s;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    width: 60%;
-/*    padding: 10px;
-     */
-     /* text-align: center !important; */
+    width: 70%;
     height: 100px;
     background-color: #FFFEFE ;
     margin: 9px auto;
@@ -105,7 +107,7 @@ td p a{
 }
 .contenido-entrada{
     width: 500px;
-align-items: center;
+    align-items: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
